# CAPS_DS_example

./: .gitignore  .pre-commit-config.yaml  Home.py  Makefile  README.md  app.py  data_download.ipynb  dev.ipynb  pyproject.toml  test.ipynb
.github/workflows/: pylint.yml
pages/: Future.py  Labelling.py  Plot.py
processing/: data.py  processing.py
