[tool.poetry]
name = "caps-ds-example"
version = "0.1.0"
description = ""
authors = ["Richard Haythornthwaite <richardhaythornthwaite@hotmail.co.uk>"]
readme = "README.md"
packages = [{include = "caps_ds_example"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
